# jira_mcp

./: .env.example  .gitignore  README.md  pyproject.toml
src/: client.py  server.py
src/tools/: issues.py
