[project]
name = "jira-mcp"
version = "1.0.0"
description = "Minimal, secure Jira MCP server. Project-level configuration via env vars."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
]

[project.scripts]
jira-mcp = "src.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
